--- a/BlackJack/BlackJack_csharp/BlackJack/BlackJack/BlackJack.csproj
+++ b/BlackJack/BlackJack_csharp/BlackJack/BlackJack/BlackJack.csproj
@@ -45,15 +45,26 @@
     <Compile Include="model\Card.cs" />
     <Compile Include="model\Dealer.cs" />
     <Compile Include="model\Deck.cs" />
+    <Compile Include="model\GameFacade.cs" />
     <Compile Include="model\Player.cs" />
+    <Compile Include="model\rules\AmericanStartNewGameStrategy.cs" />
+    <Compile Include="model\rules\EuroStartNewGameStrategy.cs" />
+    <Compile Include="model\rules\RuleFactory.cs" />
+    <Compile Include="model\rules\StartNewGameStrategy.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="view\Console.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="ClassDiagram1.cd" />
+    <None Include="Program_Main.sequencediagram" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Program_Main.sequencediagram.layout">
+      <DependentUpon>Program_Main.sequencediagram</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
